--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "tareqeee15",
+  "homepage": "https://tareqeee15.github.io/",
   "description": "Personal Website V4",
   "version": "1.0.0",
   "author": "Md. Tariqul Islam <tareqeee15@gmail.com>",
