--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-transition-group": "^4.3.0",
+    "react-reveal": "^1.2.2",
     "scrollreveal": "^4.0.5",
     "smooth-scroll": "^16.1.0",
     "styled-components": "^5.3.3"
